2014-12-29  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* posix/posix-conf-vars.list: Add _POSIX sysconf namespace.
	* sysdeps/posix/sysconf.c: Include posix-conf-vars.h.
	(__sysconf): Use CONF_IS_* macros.

	* posix/Makefile (before-compile): Add posix-conf-vars-def.h.
	($(objpfx)posix-conf-vars-def.h): New target.
	* posix/posix-conf-vars.list: New file.
	* posix/posix-conf-vars.h: New file.
	* posix/confstr.c: Include posix-conf-vars.h.
	(confstr): Use CONF_IS_* macros.
	* posix/posix-envs.def: Include posix-conf-vars.h.  Use
	CONF_IS_* macros.
	* scripts/gen-posix-conf-vars.awk: New file.

2014-12-26  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/math_private.h (fegetenv, fesetenv, feupdateenv,
	fegetround): Add no-op macros to avoid linknamespace issues.

	* sysdeps/unix/sysv/linux/clock_settime.c (SYSDEP_SETTIME): Remove
	definitions of INTERNAL_VSYSCALL and INLINE_VSYSCALL.

	* sysdeps/unix/sysv/linux/tile/sysdep.h
	(HAVE_CLOCK_GETTIME_VSYSCALL): Move definition out of
	assembly-specific section to avoid a redefinition warning.

	* sysdeps/tile/jmpbuf-unwind.h (_JMPBUF_CFA_UNWINDS_ADJ): Cast to
	long before casting to pointer to avoid a cast warning.

2014-12-23  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/tilegx/Implies: New file.

2014-12-23  Richard Earnshaw  <rearnsha@arm.com>

	* string/stpcpy.c (__stpcpy): Rewrite using strlen and memcpy.

2014-12-23  Florian Weimer  <fweimer@redhat.com>

	* iconvdata/run-iconv-test.sh: Actually test iconv modules.

2014-12-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_UTIMES): Do
	not define.
	* sysdeps/unix/sysv/linux/utimes.c: Do not include
	<kernel-features.h>.
	(__utimes) [__NR_utimes]: Make code unconditional.
	(__utimes) [!__ASSUME_UTIMES]: Remove conditional code.
	* sysdeps/unix/sysv/linux/aarch64/kernel-features.h
	(__ASSUME_UTIMES): Do not undefine.
	* sysdeps/unix/sysv/linux/tile/kernel-features.h
	(__ASSUME_UTIMES): Likewise.